# dibimbing-mlops-2

./: README.md  a.txt.dvc  pyproject.toml
.dvc/: config
