[tool.poetry]
name = "dibimbing-mlops-2"
version = "0.1.0"
description = ""
authors = ["fajar_muslim__ <fajar.muslim@efishery.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.42.0"
dvc-gdrive = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
